adaptiv titul final

--- a/src/sass/block/_header.scss
+++ b/src/sass/block/_header.scss
@@ -1,6 +1,6 @@
 .header {
   padding-top: 16px;
-  background-color: #fff;
+  background-color: #fbfbfb;
   width: 100%;
   z-index: 1000;
   position: sticky;
