--- a/src/sass/media/_titul.scss
+++ b/src/sass/media/_titul.scss
@@ -49,7 +49,6 @@
   }
 }
 
-
 @media (max-width: 1200px) {
   .content{
     &__img{
@@ -114,9 +113,6 @@
 
   }
 }
-
-
-
 
 @media (max-width: 768px) {
   .wid {
@@ -279,7 +275,7 @@
       }
 
       &_subtitle {
-        width: 299px;
+        width: 100%;
         font-size: 14px;
 
       }
@@ -313,7 +309,7 @@
     }
 
     &__img {
-      top: 296px;
+      top: 273px;
       width: 292px;
     }
   }
@@ -321,20 +317,20 @@
     width: 343px;
     padding: 24px 18px;
   }
-  .modaleco{
+  .modaleco {
     .btn{
-      width: 266px;
+      width: 100%;
     }
     &__title{
       font-size: 22px;
     }
     &__subtitle{
-      width: 270px;
+      width: 100%;
       font-size: 14px;
       line-height: 26px;
     }
     input{
-      width: 267px;
+      width: 100%;
     }
   }
 }
