--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -34,3 +34,17 @@ body{
 
 @import 'media/media';
 
+.menu__overlay {
+  display: none;
+}
+
+.menu__overlay_active {
+  display: block;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0,0,0, .7);
+}
