--- a/src/sass/block/_why.scss
+++ b/src/sass/block/_why.scss
@@ -78,9 +78,15 @@
       border-radius: 24px;
       position: relative;
       &.wooman{
+        position: relative;
         transform: translateY(-106px);
         grid-column: 3 / 4;
-        grid-row: 1 / 4;
+        grid-row: 1 / 3;
+        img {
+          position: absolute;
+          top: 0;
+          left: -94px;
+        }
       }
       &.green {
         background: #83D683;
