--- a/src/sass/block/_cmc.scss
+++ b/src/sass/block/_cmc.scss
@@ -11,12 +11,14 @@
     background-color: rgba(226, 245, 219, 0.3);
     border-radius: 24px;
     &__fon {
-      padding: 37px 60px;
-      display: flex;
-      align-items: flex-start;
+      padding: 37px 30px;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+
+      align-items: end;
       column-gap: 30px;
-      width: 100%;
-      height: 662px;
+      max-width: 100%;
+
       background-color: #ECFFE5;
       border-radius: 24px;
       position: relative;
@@ -40,14 +42,14 @@
         &-descr{
           margin-top: 26px;
           padding: 28px 24px;
-          width: 547px;
+          width: 100%;
           // height: 100%;
           border-radius: 24px;
           background: #FFFFFF;
           &-btn{
             margin-top: 32px;
             padding: 18px 24px;
-            width: 381px;
+            max-width: 381px;
             height: 56px;
             background: #41B619;
             border-radius: 20px;
