--- a/src/sass/block/_gmo.scss
+++ b/src/sass/block/_gmo.scss
@@ -11,6 +11,12 @@
     border-radius: 24px;
     position: relative;
 
+    &__gif{
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+
     &__img{
       position: absolute;
       top: -61px;
@@ -46,15 +52,7 @@
       line-height: 28px;
       letter-spacing: 0.02em;
       color: #464646;
-      &::before{
-        content: '';
-        position: absolute;
-        width: 550px;
-        height: 560px;
-        top: -35px;
-        right: -571px;
-        background: url('../img/squirrel.svg') no-repeat;
-      }
+
     }
     &__subtitle{
       margin-top: 24px;
