--- a/src/sass/block/_gmo.scss
+++ b/src/sass/block/_gmo.scss
@@ -13,8 +13,8 @@
 
     &__gif{
       position: absolute;
-      top: 0;
-      right: 0;
+      top: -104px;
+      right: -568px;
     }
 
     &__img{
