--- a/src/sass/block/_gmo.scss
+++ b/src/sass/block/_gmo.scss
@@ -3,6 +3,9 @@
   position: relative;
  
   }
+  .mobailimg{
+    display: none;
+  }
   .flat{
     padding: 38px;
     width: 428px;
@@ -18,6 +21,7 @@
     }
 
     &__img{
+      max-width: 986px;
       position: absolute;
       top: -61px;
       left: 334px;
@@ -27,7 +31,7 @@
     &::after {
       content: '';
       position: absolute;
-      z-index: -1;
+      z-index: -2;
       width: 322px;
       height: 526px;
       left: -28px;
@@ -38,7 +42,7 @@
     &::before {
       content: '';
       position: absolute;
-      z-index: -1;
+      z-index: -2;
       left: -58px;
       top: 100px;
       width: 322px;
@@ -98,7 +102,7 @@
     &__btn{
       margin-top: 32px;
       padding: 18px 24px;
-      width: 350px;
+      max-width: 350px;
       height: 56px;
       background: #41B619;
       border-radius: 20px;
