--- a/src/sass/block/_range.scss
+++ b/src/sass/block/_range.scss
@@ -46,6 +46,7 @@
         width: 100%;
         height: 45px;
         align-items: center;
+        font-size: 18px;
 
         input {
           background: transparent;
