--- a/src/sass/block/_foother.scss
+++ b/src/sass/block/_foother.scss
@@ -1,8 +1,8 @@
 .foother{
   padding: 145px 0 52px 0;
-  .confid {
+  .confid{
+    margin-top: 30px;
     a{
-      margin-top: 30px;
       font-weight: 400;
       font-size: 12px;
       line-height: 15px;
@@ -10,11 +10,12 @@
       color: #7D7D7D;
     }
   }
-  .bot{
-    border-top: 1px solid #E4E8EA;
-  }
-  .titul__menu{
-    padding-top: 24px;
-    border-bottom: none;
+  .header{
+    &__menu{
+      padding-top: 16px;
+      border-bottom: none;
+      border-top: 1px solid #E4E8EA;
+    }
+
   }
 }
