--- a/src/sass/block/_modal.scss
+++ b/src/sass/block/_modal.scss
@@ -1,4 +1,10 @@
 // Стилизация текста внутри модальных окон
+.form-control:focus {
+  border-color: #41B619;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(65, 182, 25, 0.6);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(65, 182, 25, 0.6);
+}
 
 .modaleco {
   input{
