--- a/src/sass/block/_why.scss
+++ b/src/sass/block/_why.scss
@@ -132,7 +132,7 @@
           top: -58px;
           width: 130px;
           height: 130px;
-          background:url('../icons/safe.svg');
+          background:url('../icons/save.png');
           right: -0;
         }
       }
