--- a/src/sass/block/_modal.scss
+++ b/src/sass/block/_modal.scss
@@ -182,3 +182,11 @@
     margin-top: 0;
   }
 }
+
+// Уменьшаю размер чертежей квартир в модальных окнах
+.modal-body{
+  img{
+    width: 100%;
+    max-height: 500px;
+  }
+}
