--- a/src/sass/block/_header.scss
+++ b/src/sass/block/_header.scss
@@ -20,16 +20,18 @@
       line-height: 24px;
       text-transform: uppercase;
       color: #41B619;
-      &:hover{
-        color:  #2D920A;
+
+      &:hover {
+        color: #2D920A;
       }
     }
+
     &-hamburger {
       display: none;
     }
 
     &_links {
-      
+
       &-order {
         margin: 0;
         padding: 0;
@@ -47,9 +49,7 @@
           transition: all 0.4s;
 
           &:hover {
-            font-weight: 700;
-            font-size: 16px;
-            line-height: 28px;
+            text-shadow: 0 0 .85px #41B619, 0 0 .85px #41B619;
             color: #41B619;
           }
         }
@@ -72,8 +72,10 @@
     flex-direction: column;
     justify-content: flex-start;
     gap: 24px;
+
     li {
       list-style-type: none;
+
       a {
         font-style: normal;
         font-weight: 400;
