--- a/src/sass/block/_why.scss
+++ b/src/sass/block/_why.scss
@@ -1,41 +1,50 @@
-.why{
+.why {
   position: relative;
   padding-top: 180px;
-  .carousel{
+
+  .carousel {
     display: none;
-    &-inner{
-     margin-top: 50px;
+
+    &-inner {
+      margin-top: 50px;
     }
-    &-indicators{
+
+    &-indicators {
       bottom: -40px;
-      button{
+
+      button {
         box-sizing: border-box;
         height: 10px;
         width: 10px;
         border-top: none;
         background: #c2c6c6;
         border-radius: 50%;
-        &.active{
+
+        &.active {
           background: #41B619;
         }
       }
     }
-    &-item{
+
+    &-item {
       margin-top: 60px;
       position: relative;
-      img{
+      min-height: 390px !important;
+      img {
         position: absolute;
         top: -56px;
         right: 0;
       }
-      .why__wrapper_card{
-        &::after{
+
+      .why__wrapper_card {
+        &::after {
           display: none;
         }
       }
     }
   }
-  &__title{
+
+  &__title {
     position: relative;
     font-weight: 700;
     font-size: 32px;
@@ -43,6 +52,7 @@
     letter-spacing: 0.02em;
     text-transform: uppercase;
     color: #464646;
+
     &:before {
       content: 'почему';
       position: absolute;
@@ -56,7 +66,8 @@
       opacity: 0.05;
     }
   }
-  &__wrapper{
+
+  &__wrapper {
     position: relative;
     margin-top: 61px;
     display: grid;
@@ -69,7 +80,7 @@
     //   transform: translateY(-53%);
     //   right: -473px;
     // }
-   
+
     &_card {
       margin-top: 50px;
       width: 90%;
@@ -77,72 +88,84 @@
       padding: 28px 24px 24px;
       border-radius: 24px;
       position: relative;
-      &.wooman{
+
+      &.wooman {
         position: relative;
         transform: translateY(-106px);
         grid-column: 3 / 4;
         grid-row: 1 / 3;
+
         img {
           position: absolute;
           top: 0;
           left: -94px;
         }
       }
+
       &.green {
         background: #83D683;
+
         &::after {
           content: '';
           position: absolute;
           top: -58px;
           width: 130px;
           height: 130px;
-          background:url('../icons/maneytabl.svg');
+          background: url('../icons/maneytabl.svg');
           right: -13px;
         }
       }
-      &.orange{
+
+      &.orange {
         background: #FCA547;
+
         &::after {
           content: '';
           position: absolute;
           top: -58px;
           width: 130px;
           height: 130px;
-          background:url('../icons/laptop.png');
+          background: url('../icons/laptop.png');
           right: -13px;
         }
-      } 
-      &.blue{
+      }
+
+      &.blue {
         background: #53B4E4;
+
         &::after {
           content: '';
           position: absolute;
           top: -58px;
           width: 130px;
           height: 130px;
-          background:url('../icons/Key.svg');
+          background: url('../icons/Key.svg');
           right: -0;
         }
       }
-      &.violet{
+
+      &.violet {
         background: #C889FA;
+
         &::after {
           content: '';
           position: absolute;
           top: -58px;
           width: 130px;
           height: 130px;
-          background:url('../icons/save.png');
+          background: url('../icons/save.png');
           right: -0;
         }
       }
-      &-title{
+
+      &-title {
         font-weight: 700;
         font-size: 22px;
         line-height: 28px;
         letter-spacing: 0.02em;
         color: #FFFFFF;
       }
+
       &-subtitle {
         margin-top: 12px;
         font-weight: 400;
