--- a/src/sass/block/_why.scss
+++ b/src/sass/block/_why.scss
@@ -88,7 +88,13 @@
       padding: 28px 24px 24px;
       border-radius: 24px;
       position: relative;
-
+      &-img{
+        position: absolute;
+        top: -55px;
+        right: -16px;
+        width: 25%;
+        
+      }
       &.wooman {
         position: relative;
         transform: translateY(-106px);
@@ -104,58 +110,18 @@
 
       &.green {
         background: #83D683;
-
-        &::after {
-          content: '';
-          position: absolute;
-          top: -58px;
-          width: 130px;
-          height: 130px;
-          background: url('../icons/maneytabl.svg');
-          right: -13px;
-        }
       }
 
       &.orange {
         background: #FCA547;
-
-        &::after {
-          content: '';
-          position: absolute;
-          top: -58px;
-          width: 130px;
-          height: 130px;
-          background: url('../icons/laptop.png');
-          right: -13px;
-        }
       }
 
       &.blue {
         background: #53B4E4;
-
-        &::after {
-          content: '';
-          position: absolute;
-          top: -58px;
-          width: 130px;
-          height: 130px;
-          background: url('../icons/Key.svg');
-          right: -0;
-        }
       }
 
       &.violet {
         background: #C889FA;
-
-        &::after {
-          content: '';
-          position: absolute;
-          top: -58px;
-          width: 130px;
-          height: 130px;
-          background: url('../icons/save.png');
-          right: -0;
-        }
       }
 
       &-title {
