--- a/src/sass/media/_why.scss
+++ b/src/sass/media/_why.scss
@@ -15,6 +15,9 @@
 }
 
 @media (max-width: 991px) {
+  .why__wrapper_card-img{
+    width: 30%;
+  }
   .why__wrapper_card-title{
     font-size: 18px;
   
@@ -28,6 +31,7 @@
     }
   }
 }
+
 
 @media (max-width: 700px) {
   .why{
