--- a/src/sass/block/_gmo.scss
+++ b/src/sass/block/_gmo.scss
@@ -16,8 +16,11 @@
 
     &__gif{
       position: absolute;
-      top: -104px;
-      right: -568px;
+      top: 34px;
+      right: -493px;
+      img{
+        width: 516px;
+      }
     }
 
     &__img{
