--- a/src/sass/media/_why.scss
+++ b/src/sass/media/_why.scss
@@ -40,6 +40,11 @@
     }
     .carousel{
       display: block;
+      .carousel-inner{
+        .carousel-item{
+          min-height: 260px;
+        }
+      }
     }
   }
 
@@ -68,6 +73,4 @@
     }
   }
   }
-
-
 }
