--- a/src/sass/block/_why.scss
+++ b/src/sass/block/_why.scss
@@ -2,46 +2,71 @@
   position: relative;
   padding-top: 180px;
 
-  .carousel {
-    display: none;
-
-    &-inner {
-      margin-top: 50px;
-    }
-
-    &-indicators {
-      bottom: -40px;
-
-      button {
+  .car {
+    .slick-dots {
+      margin-top: 15px;
+      display: flex;
+      justify-content: center;
+      font-size: 0;
+      column-gap: 30px;
+      padding-left: 0;
+      li>button {
+        transition: 0.5s all;
         box-sizing: border-box;
-        height: 10px;
-        width: 10px;
-        border-top: none;
-        background: #c2c6c6;
+        width: 20px;
+        height: 20px;
         border-radius: 50%;
-
-        &.active {
+        border: none;
+      }
+      
+      li.slick-active {
+        button{
           background: #41B619;
         }
       }
     }
-
-    &-item {
-      margin-top: 60px;
-      position: relative;
-      img {
-        position: absolute;
-        top: -56px;
-        right: 0;
-      }
-
-      .why__wrapper_card {
-        &::after {
-          display: none;
-        }
-      }
-    }
   }
+
+  // .carousel {
+  //   display: none;
+
+  //   &-inner {
+  //     margin-top: 50px;
+  //   }
+
+  //   &-indicators {
+  //     bottom: -40px;
+
+  //     button {
+  //       box-sizing: border-box;
+  //       height: 10px;
+  //       width: 10px;
+  //       border-top: none;
+  //       background: #c2c6c6;
+  //       border-radius: 50%;
+
+  //       &.active {
+  //         background: #41B619;
+  //       }
+  //     }
+  //   }
+
+  //   &-item {
+  //     margin-top: 60px;
+  //     position: relative;
+  //     img {
+  //       position: absolute;
+  //       top: -56px;
+  //       right: 0;
+  //     }
+
+  //     .why__wrapper_card {
+  //       &::after {
+  //         display: none;
+  //       }
+  //     }
+  //   }
+  // }
 
   &__title {
     position: relative;
@@ -83,13 +108,15 @@
       padding: 28px 24px 24px;
       border-radius: 24px;
       position: relative;
-      &-img{
+
+      &-img {
         position: absolute;
         top: -55px;
         right: -16px;
         width: 25%;
-        
+
       }
+
       &.wooman {
         position: relative;
         transform: translateY(-106px);
