--- a/src/sass/block/_why.scss
+++ b/src/sass/block/_why.scss
@@ -3,6 +3,7 @@
   padding-top: 180px;
 
   .car {
+    display: none;
     .slick-dots {
       margin-top: 15px;
       display: flex;
@@ -102,8 +103,7 @@
 
 
     &_card {
-      margin-top: 50px;
-      width: 90%;
+      width: 86%;
       margin: 0 auto;
       padding: 28px 24px 24px;
       border-radius: 24px;
@@ -111,7 +111,7 @@
 
       &-img {
         position: absolute;
-        top: -55px;
+        top: -45px;
         right: -16px;
         width: 25%;
 
