--- a/src/sass/block/_benefit.scss
+++ b/src/sass/block/_benefit.scss
@@ -19,8 +19,7 @@
       line-height: 54px;
       letter-spacing: 0.02em;
       text-transform: uppercase;
-      color: #7EDC5D;
-      opacity: 0.05;
+      color: rgba(126, 220, 93, 0.05);
     }
   }
 &__nav {
