--- a/src/sass/block/_exam.scss
+++ b/src/sass/block/_exam.scss
@@ -53,6 +53,7 @@
         font-size: 16px;
         line-height: 20px;
         text-align: center;
+        border: none;
         color: #FFFFFF;
         cursor: pointer;
         text-decoration: none;
