--- a/src/sass/block/_benefit.scss
+++ b/src/sass/block/_benefit.scss
@@ -104,7 +104,7 @@
   max-width: 628px;
   background: #E2F5DB;
   border-radius: 32px;
-  position: relative;
+  // position: relative;
 
   &_img{
     position: absolute;
