--- a/src/sass/block/_header.scss
+++ b/src/sass/block/_header.scss
@@ -9,7 +9,7 @@
   &__menu {
     padding-bottom: 16px;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
     border-bottom: 1px solid #E4E8EA;
 
@@ -17,7 +17,6 @@
       text-decoration: none;
       font-weight: 700;
       font-size: 20px;
-      line-height: 24px;
       text-transform: uppercase;
       color: #41B619;
 
