--- a/src/sass/block/_benefit.scss
+++ b/src/sass/block/_benefit.scss
@@ -104,8 +104,8 @@
   max-width: 628px;
   background: #E2F5DB;
   border-radius: 32px;
-  // position: relative;
-
+  position: relative;
+  
   &_img{
     position: absolute;
     width: 25%;
