--- a/src/sass/media/_benefit.scss
+++ b/src/sass/media/_benefit.scss
@@ -224,7 +224,7 @@
   .eco {
     padding: 6px;
     max-width: 100%;
-
+    position: unset;
     &__card {
       &_title {
         margin-bottom: 0;
