--- a/src/sass/media/_cmc.scss
+++ b/src/sass/media/_cmc.scss
@@ -45,6 +45,8 @@
               display: none;
               &.grid{
                 display: block;
+                margin: 0 auto;
+                margin-top: 20px;
               }
             }
           }
