fix buuton finaly

--- a/src/sass/media/_gmo.scss
+++ b/src/sass/media/_gmo.scss
@@ -101,6 +101,7 @@
     .flat {
       border-radius: 0 0 24px 24px;
       margin: 0 auto;
+      position: inherit;
       &::before{
       display: none;
       }
