--- a/src/sass/media/_benefit.scss
+++ b/src/sass/media/_benefit.scss
@@ -213,6 +213,7 @@
 
       &_btn {
         font-size: 10px;
+        width: 100%;
       }
     }
 
@@ -253,6 +254,7 @@
 
       &_btn {
         font-size: 10px;
+        width: 100%;
       }
     }
   }
