--- a/src/sass/block/_gmo.scss
+++ b/src/sass/block/_gmo.scss
@@ -105,12 +105,13 @@
     &__btn{
       margin-top: 32px;
       padding: 18px 24px;
-      max-width: 350px;
+      width: 100%;
       height: 56px;
       background: #41B619;
       border-radius: 20px;
       font-weight: 600;
       font-size: 16px;
+      border: none;
       line-height: 20px;
       text-align: center;
       color: #FFFFFF;
