--- a/src/sass/block/_cmc.scss
+++ b/src/sass/block/_cmc.scss
@@ -2,6 +2,7 @@
   padding-top: 145px;
   margin: 0 auto;
   min-height: 750px;
+
   .impl {
     padding: 44px 33px 44px 33px;
     display: flex;
@@ -11,6 +12,7 @@
     margin: 0 auto;
     background-color: rgba(226, 245, 219, 0.3);
     border-radius: 24px;
+
     &__fon {
       padding: 37px 30px;
       display: grid;
@@ -23,38 +25,41 @@
       background-color: #ECFFE5;
       border-radius: 24px;
       position: relative;
-      &_img{
+
+      &_img {
         position: absolute;
         top: -214px;
         left: -119px;
       }
-      &_gif {
+
+      &_iframe>iframe {
         width: 100%;
-        img{
-          width: 100%;
-          max-height: 587px;
-          border-radius: 24px;
-        }
- 
-        
+        max-height: 587px;
+        border-radius: 24px;
       }
-      &_item{
-       
-        &-descr{
+
+      &_gif {
+        display: none;
+      }
+
+      &_item {
+
+        &-descr {
           margin-top: 26px;
           padding: 28px 24px;
-          max-width:  547px;
+          max-width: 547px;
           // height: 100%;
           border-radius: 24px;
           background: #FFFFFF;
-          &-btn{
+
+          &-btn {
             margin-top: 32px;
             padding: 18px 24px;
             max-width: 381px;
             height: 56px;
             background: #41B619;
             border-radius: 20px;
-            border:none;
+            border: none;
             font-weight: 600;
             font-size: 16px;
             line-height: 20px;
@@ -62,22 +67,26 @@
             color: #FFFFFF;
             cursor: pointer;
             text-decoration: none;
+
             &:hover {
               background: #2D920A;
               color: #FFFFFF;
               transition: all 200ms ease;
             }
-            &.grid{
+
+            &.grid {
               display: none;
             }
           }
-          &-text{
+
+          &-text {
             font-weight: 400;
             font-size: 16px;
             line-height: 28px;
             letter-spacing: 0.02em;
             color: #464646;
-            span{
+
+            span {
               font-weight: 700;
               font-size: 16px;
               line-height: 28px;
@@ -86,14 +95,16 @@
             }
           }
         }
-        &-title{
+
+        &-title {
           font-weight: 700;
           font-size: 32px;
           line-height: 54px;
           letter-spacing: 0.02em;
           text-transform: uppercase;
           color: #464646;
-          &.grid{
+
+          &.grid {
             display: none;
           }
         }
