--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -42,6 +42,10 @@ body{
   background-color: #fbfbfb;
 }
 
+video {
+  border-radius: 24px;
+}
+
 .container {
   max-width: 1300px;
   margin: 0 auto;
