--- a/src/sass/media/_cmc.scss
+++ b/src/sass/media/_cmc.scss
@@ -109,6 +109,12 @@
 
             &-text {
               font-size: 11px;
+              line-height: 20px;
+
+              span {
+                font-size: 12px;
+                line-height: 16px;
+              }
             }
           }
 
