--- a/src/sass/media/_titul.scss
+++ b/src/sass/media/_titul.scss
@@ -261,11 +261,13 @@
     &__wrapper {
       &_title {
         font-size: 24px;
+        line-height: 22px;
       }
 
       &_subtitle {
         width: 100%;
         font-size: 14px;
+        line-height: 22px;
 
       }
 
